fix: use red text color to ensure proper contrast (#10266)

--- a/packages/aura/src/components/input-container.css
+++ b/packages/aura/src/components/input-container.css
@@ -1,6 +1,6 @@
 :where(:root, :host, [theme]) {
   --vaadin-input-field-background: var(--aura-surface);
-  --vaadin-input-field-error-color: var(--aura-red);
+  --vaadin-input-field-error-color: var(--aura-red-text);
 }
 
 ::part(input-field),
